Adds assetFileNames to rollupOptions and includes stylesheet in app block.

--- a/extensions/tokengate/blocks/app-block.liquid
+++ b/extensions/tokengate/blocks/app-block.liquid
@@ -25,6 +25,7 @@
   Script needs to be loaded as a module to be able to use import statements.
 {% endcomment %}
 <script async type="module" src="{{ "index.js" | asset_url }}"></script>
+<link rel="stylesheet" href="{{ "index.css" | asset_url }}">
 
 {% schema %}
 {
